--- a/Lesson04b-Webpages-Maps-and-Sharing/T04b.01-Exercise-OpenWebpage/app/src/main/res/layout/activity_main.xml
+++ b/Lesson04b-Webpages-Maps-and-Sharing/T04b.01-Exercise-OpenWebpage/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,10 @@
     android:padding="32dp"
     tools:context=".MainActivity">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/et_url"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
